Energy Pages alignment fixes added.

--- a/src/assets/scss/custom/structure/_header.scss
+++ b/src/assets/scss/custom/structure/_header.scss
@@ -7,7 +7,6 @@
     font-style: normal;
     font-weight: 700;
     font-size: 1.5rem;
-    line-height: 125%;
     color: #1d2939;
 }
 
